--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@ body {
     background-color: black;
     font-family: monospace;
 }
-#canvas {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-}
-#ui {
+#left-panel {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -43,13 +38,89 @@ body {
 #message {
     position: relative;
 }
+#canvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 800px;
+    height: 400px;
+}
+#canvas-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 800px;
+    height: 400px;
+}
+#main-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    width: 800px;
+}
+#inventory-container {
+    position: absolute;
+    top: 400px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    color: white;
+}
+.inventory-slot {
+    position: relative;
+    float: left;
+    width: 75px;
+    height: 75px;
+    border: 2px solid grey;
+    margin-right: -2px;
+}
+.inventory-slot-number {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 20px;
+}
+.inventory-item-image {
+    position: absolute;
+    top: 10px;
+    left: 0px;
+    right: 0px;
+    height: 30px;
+    font-size: 20px;
+    text-align: center;
+}
+.inventory-item-name {
+    position: absolute;
+    top: 40px;
+    left: 0px;
+    right: 0px;
+    height: 20px;
+    text-align: center;
+}
 </style>
 
 </head>
 <body>
 
-<canvas id="canvas" width=800 height=500></canvas>
-<div id="ui">
+<div id="main-container">
+    <div id="canvas-container">
+        <canvas id="canvas" width=800 height=500></canvas>
+    </div>
+    <div id="inventory-container">
+
+
+            <div class="inventory-slot">
+                <div class="inventory-slot-number">1</div>
+                <div class="inventory-item">
+                    <div class="inventory-item-image"><span style="color:blue">(</span></div>
+                    <div class="inventory-item-name">larvae</div>
+                </div>
+            </div>
+
+    </div>
+</div>
+<div id="left-panel">
     <div id="hud"></div>
     <div id="log"></div>
 </div>
