--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@ div.statistic > span.value {
         <div id="hud">
             <div id="hud-lhs">
                 <div id="hud-health" class="statistic"><span class="name">Health:</span><span class="value">10/10</span></div>
+                <div id="hud-here">
+                </div>
                 <div id="hud-modifiers">
                     <span class="modifier">Ant-like Strength(10)</span>, 
                     <span class="modifier">Ant-like Strength(10)</span>
