Bees and spiders

--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@ div.statistic > span.value {
     height: 16px;
     padding-bottom: 14px;
 }
+#hud-here {
+    position: relative;
+    width: 100px;
+    height: 16px;
+    padding-bottom: 14px;
+}
 #hud-modifiers {
     position: relative;
 }
