--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 <script src="lib/jquery.js"></script>
+<script src="lib/seedrandom.js"></script>
 <script src="lib/traceur-runtime.js"></script>
 
 <script src="output/compiled.js"></script>
